Fix workshops buttons on small screens:wq

--- a/style.css
+++ b/style.css
@@ -5100,3 +5100,9 @@ input[type=submit]:hover {
 		margin-bottom: 30px;
 	}
 }
+
+@media (min-width: 596px) {
+	.o-warsztatach-not-visible-on-small {
+		display: none;
+	}
+}
